# projecteuler-c

./: CMakeLists.txt  README.md
include/: p001.h  p002.h  p003.h  p004.h  p005.h  p006.h  p007.h  pe.h
src/: pe.c
src/prob/: p001.c  p002.c  p003.c  p004.c  p005.c  p006.c  p007.c
test/: prob_test.cpp
